projects/cupcake/navbar.css
.topnav {
    float: right;
  }
  .topnav-left{
    float: left;
  }
  .navbar {
    overflow: hidden;
    font-family: 'JetBrains Mono', sans-serif;
    padding: 10px;
    padding-top: 0;
  }
  .navbar a {
    float: left;
    color: unset;
    text-align: center;
    padding: 20px 16px;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 1.5px;
    font-weight: 200;
    font-size: 17px;
  }
  .navbar a:hover, .dropdown:hover, .dropbtn {
    opacity: 0.3;
    transition: all ease-in-out 250ms;
  }
  .navbar .icon {
    display: none;
  }
  
  .dropdown {
    float: left;
    overflow: hidden;
  }
  
  .dropdown .dropbtn {
    font-size: 17px;    
    border: none;
    outline: none;
    color: white;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
  }
  
  .dropdown-content a:hover {
    background-color: #ddd;
    color: black;
  }
  
  .dropdown:hover .dropdown-content {
    display: block;
  }
  
  @media screen and (max-width: 600px) {
    .topnav a, .dropdown .dropbtn {
      display: none;
    }
    .navbar a.icon {
      float: right;
      display: block;
    }
  }
  
  @media screen and (max-width: 600px) {
  body{
    margin:10px;
  }
  .navbar{
    padding: 0;
  }
  .topnav {
    float: unset;
  }
  .topnav-left{
    float: unset;
  }
    .navbar.responsive {position: relative;}
    .navbar.responsive .icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .navbar.responsive a {
      float: none;
      display: block;
      text-align: center;
      background-color: rgb(51, 51, 51, 0.5);
      color: white;
    }
    .navbar.responsive .dropdown {float: none;}
    .navbar.responsive .dropdown-content {position: relative;}
    .navbar.responsive .dropdown .dropbtn {
      display: block;
      width: 100%;
      text-align: left;
    }
  }

